Fixed the alignment of the header.

--- a/9439B-G4/altstyles/altstyle.css
+++ b/9439B-G4/altstyles/altstyle.css
@@ -139,27 +139,32 @@
 
 #header {
 		background-color: skyblue;
-		text-align: center;
 		position: fixed;
 		left: 0;
 		top: 0;
-        padding-bottom: 4%;
+        padding-bottom: 1%;
 		width: 100%;
 		z-index: 10000;
 		cursor: default;
         font-size: 160%;
         font-family: monospace;
 	}
+#header h1 {
+    text-align: center;
+    padding-right: 250px;
+    padding-left: 250px; 
+}
 
 		
 		#header .image.avatar {
-            float:right;
+            float:left;
 			margin-right: 5%;
 			width: 7em;
             background-color: skyblue;
             margin-top: -2%;
 		}
-        
+
+
         #header .button{
             border-radius: 25px;
             background: white;
@@ -178,13 +183,14 @@
            
 }
         #header a{
+            text-align: center;
             border-radius: 25px;
             background: white;
-            padding: 15px; 
+            padding: 15px;
             width: 200px;
             height: 50px;
             color: black;
-            float: left;
+            float: right;
             position: relative;
 			text-decoration: none;
 			outline: 0;
